--- a/app/_app-common.scss
+++ b/app/_app-common.scss
@@ -6,9 +6,26 @@
     font-family: 'FontAwesome';
 }
 
+.h1, .h2, .h3, .h4, .h5, .h6 {
+    font-family: 'Cabin';
+    font-weight: bold;
+}
+
+.action-bar {
+    background-color: $purple;
+}
+
 .action-bar-title {
     font-family: 'Cabin';
     font-weight: bold;
+}
+
+.hr-light, .hr-dark {
+    height: 2;
+}
+
+.hr-dark {
+    background-color: $orange;
 }
 
 .btn {
@@ -25,6 +42,11 @@
     &-secure {
         color: $white;
         font-size: 18;
+    }
+
+    &-outline {
+        color: $black;
+        border-color: $black;
     }
 }
 
@@ -58,6 +80,17 @@
             font-size: 20;
             color: $white;
             margin-bottom: 5;
+        }
+    }
+}
+
+.form-dark {
+    .input-field {
+        .label {
+            color: $black;
+        }
+        .input {
+            color: $black;
         }
     }
 }
