WIP SideDrawer, Settings, Add and Edit Item

--- a/app/_app-common.scss
+++ b/app/_app-common.scss
@@ -6,6 +6,13 @@
     font-family: 'FontAwesome';
 }
 
+@each $percentage in 5, 10, 15, 20, 25 {
+    .dbg-#{$percentage} {
+        background-color: lighten(green, $percentage);
+        opacity: 0.5;
+    }
+}
+
 .h1,
 .h2,
 .h3,
@@ -44,6 +51,11 @@
     font-weight: bold;
     font-size: 20;
     border-radius: $border-radius;
+
+    &-icon {
+        font-family: 'FontAwesome';
+        margin: 0;
+    }
 
     &-primary {
         background-color: $green;
