--- a/app/_app-variables.scss
+++ b/app/_app-variables.scss
@@ -73,12 +73,12 @@ $side-drawer-header-brand: #737373;
 $side-drawer-background: #ffffff;
 
 // ActionBar
-$ab-background: $orange;
+$ab-background: $purple;
 $ab-color: $white;
 
 // Buttons
 $btn-color-inverse: $white;
-$btn-color: $accent;
+$btn-color: $white;
 $btn-color-secondary: darken($btn-color, 10%);
 $btn-color-outline-highlighted: lighten($btn-color, 10%);
 
